--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Pastebin based on Cloudflare worker",
   "repository": "https://github.com/SharzyL/pastebin-worker",
   "type": "module",
+  "packageManager": "yarn@4.5.0",
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev --var BASE_URL:http://localhost:8787 --port 8787",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.4.2",
     "@vitest/coverage-istanbul": "1.4.0",
+    "@vitest/runner": "1.4.0",
+    "@vitest/snapshot": "1.4.0",
     "vitest": "1.4.0",
     "eslint": "^8.33.0",
     "prettier": "^2.8.3",
