--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,3 @@
 nodeLinker: node-modules
-installStatePath: .yarn/install-state.gz
-compressionLevel: mixed
 enableGlobalCache: true
-immutable: false
+enableImmutableInstalls: false
